# api/swagger.yaml
@@ -1,7 +1,7 @@
 ---
 swagger: "2.0"
 info:
-  version: "0.0.5"
+  version: "0.0.6"
   title: "Customer Portal API"
 basePath: "/v1"
 schemes:
@@ -48,15 +48,17 @@ paths:
           description: "OK"
           schema:
             $ref: "#/definitions/CompanyList"
+        400:
+          description: "Invalid email supplied"
         404:
           description: "Company not found"
       x-swagger-router-controller: "Default"
-  /company/{companyid}:
+  /company/{companyId}:
     get:
       description: "会社IDに従った会社情報を提供"
-      operationId: "companyCompanyidGET"
+      operationId: "companyCompanyIdGET"
       parameters:
-      - name: "companyid"
+      - name: "companyId"
         in: "path"
         description: "会社ID"
         required: true
@@ -87,17 +89,17 @@ paths:
         description: "顧客契約番号"
         required: false
         type: "string"
-      - name: "enduser"
+      - name: "endUser"
         in: "query"
         description: "エンドユーザー"
         required: false
         type: "string"
-      - name: "startdate"
+      - name: "startDate"
         in: "query"
         description: "契約開始日"
         required: false
         type: "string"
-      - name: "enddate"
+      - name: "endDate"
         in: "query"
         description: "契約終了日"
         required: false
@@ -107,6 +109,10 @@ paths:
           description: "OK"
           schema:
             $ref: "#/definitions/ContractList"
+        400:
+          description: "Invalied query supplied"
+        404:
+          description: "ContractList not found"
       x-swagger-router-controller: "Default"
   /contract/list/{companyId}:
     get:
@@ -123,6 +129,10 @@ paths:
           description: "OK"
           schema:
             $ref: "#/definitions/ContractList"
+        400:
+          description: "Invalied ID supplied"
+        404:
+          description: "ContractList not found"
       x-swagger-router-controller: "Default"
   /contract/{contractId}:
     get:
@@ -139,6 +149,10 @@ paths:
           description: "OK"
           schema:
             $ref: "#/definitions/Contract"
+        400:
+          description: "Invalied ID supplied"
+        404:
+          description: "Contract not found"
       x-swagger-router-controller: "Default"
   /customer:
     get:
@@ -156,18 +170,15 @@ paths:
           description: "OK"
           schema:
             $ref: "#/definitions/Customer"
+        404:
+          description: "Customer not found"
       x-swagger-router-controller: "Default"
-  /customer/{customerid}:
+  /customer/{customerId}:
     get:
       description: "顧客IDに従った顧客情報を提供"
-      operationId: "customerCustomeridGET"
+      operationId: "customerCustomerIdGET"
       parameters:
-      - name: "api_key"
-        in: "header"
-        required: true
-        type: "integer"
-        format: "int64"
-      - name: "customerid"
+      - name: "customerId"
         in: "path"
         description: "顧客ID"
         required: true
@@ -188,12 +199,7 @@ paths:
       description: "製品詳細情報を提供"
       operationId: "productGET"
       parameters:
-      - name: "productid"
-        in: "query"
-        description: "製品ID（productListで取得した一覧から選択した製品ID）"
-        required: true
-        type: "string"
-      - name: "customerid"
+      - name: "customerId"
         in: "query"
         description: "顧客ID"
         required: false
@@ -208,8 +214,10 @@ paths:
           description: "OK"
           schema:
             $ref: "#/definitions/Product"
+        400:
+          description: "Invalied query supplied"
         404:
-          description: "Company not found"
+          description: "Product not found"
       x-swagger-router-controller: "Default"
   /product/list:
     get:
@@ -226,22 +234,22 @@ paths:
         description: "シリアル番号"
         required: false
         type: "string"
-      - name: "startdate"
+      - name: "startDate"
         in: "query"
         description: "契約開始日"
         required: false
         type: "string"
-      - name: "enddate"
+      - name: "endDate"
         in: "query"
         description: "契約終了日"
         required: false
         type: "string"
-      - name: "productid"
+      - name: "productId"
         in: "query"
         description: "製品ID"
         required: false
         type: "string"
-      - name: "productname"
+      - name: "productName"
         in: "query"
         description: "製品テキスト"
         required: false
@@ -261,6 +269,10 @@ paths:
           description: "OK"
           schema:
             $ref: "#/definitions/ProductList"
+        400:
+          description: "Invalied query supplied"
+        404:
+          description: "ProductList not found"
       x-swagger-router-controller: "Default"
   /product/list/{companyId}:
     get:
@@ -277,6 +289,10 @@ paths:
           description: "OK"
           schema:
             $ref: "#/definitions/ProductList"
+        400:
+          description: "Invalied ID supplied"
+        404:
+          description: "ProductList not found"
       x-swagger-router-controller: "Default"
   /product/{productId}:
     get:
@@ -294,6 +310,10 @@ paths:
           description: "OK"
           schema:
             $ref: "#/definitions/Product"
+        400:
+          description: "Invalied ID supplied"
+        404:
+          description: "Product not found"
       x-swagger-router-controller: "Default"
   /sales:
     get:
@@ -310,13 +330,17 @@ paths:
           description: "OK"
           schema:
             $ref: "#/definitions/inline_response_200"
+        400:
+          description: "Invalied email supplied"
+        404:
+          description: "Sales not found"
       x-swagger-router-controller: "Default"
-  /sales/{companyid}:
+  /sales/{companyId}:
     get:
       description: "担当営業情報を提供する"
-      operationId: "salesCompanyidGET"
+      operationId: "salesCompanyIdGET"
       parameters:
-      - name: "companyid"
+      - name: "companyId"
         in: "path"
         description: "会社ID（SAP/HANAで管理している会社コード/取引先ID,受注先IDで使用しているIDを想定）"
         required: true
@@ -325,13 +349,17 @@ paths:
         200:
           description: "OK"
           schema:
-            $ref: "#/definitions/inline_response_200"
+            $ref: "#/definitions/inline_response_200_1"
+        400:
+          description: "Invalied ID supplied"
+        404:
+          description: "Sales not found"
       x-swagger-router-controller: "Default"
 definitions:
   Customer:
     type: "object"
     required:
-    - "companyid"
+    - "companyId"
     - "email"
     - "firstname"
     properties:
@@ -363,7 +391,7 @@ definitions:
         type: "string"
         format: "string"
         description: "FAX番号"
-      companyid:
+      companyId:
         type: "string"
         format: "string"
         description: "所属会社ID（HANAで管理している会社コード（取引先ID、受注先IDなど）を想定）"
@@ -436,9 +464,9 @@ definitions:
     type: "object"
     required:
     - "email"
-    - "salesid"
+    - "salesId"
     properties:
-      salesid:
+      salesId:
         type: "string"
         description: "担当営業ID（社員番号？）"
       email:
@@ -462,73 +490,73 @@ definitions:
       contract:
         type: "string"
         description: "個別契約番号"
-      companyid:
+      companyId:
         type: "string"
         description: "会社ID"
-      typecode:
+      typeCode:
         type: "integer"
         description: "契約種別コード"
       type:
         type: "string"
         description: "契約種別（ex. 保守）"
-      mastercontract:
+      masterContract:
         type: "string"
         description: "基本契約番号"
       note:
         type: "string"
         description: "テキスト（備忘欄？）"
-      orderby:
+      orderBy:
         type: "string"
         description: "発注先"
-      responsibleparty:
+      responsibleParty:
         type: "string"
         description: "顧客担当"
       caller:
         type: "string"
         description: "コール元会社名"
-      emergencycaller:
+      emergencyCaller:
         type: "string"
         description: "夜間・休日コール元情報"
-      chargeofsales:
+      chargeOfSales:
         type: "string"
         description: "担当営業"
-      chargeofenginner:
+      chargeOfEnginner:
         type: "string"
         description: "担当技術"
-      customercontractno:
+      customerContractno:
         type: "string"
         description: "顧客契約番号"
       status:
         type: "string"
         description: "ステータス"
-      amountof:
+      amountOf:
         type: "integer"
         description: "契約金額"
-      automaticrenewal:
+      automaticRenewal:
         type: "boolean"
         description: "自動更新"
-      startdate:
+      startDate:
         type: "string"
         description: "契約開始日"
-      enddate:
+      endDate:
         type: "string"
         description: "契約終了日"
-      enteringdate:
+      enteringDate:
         type: "string"
         description: "締結日"
-      fixeddate:
+      fixedDate:
         type: "string"
         description: "契約確定日"
       eol:
         type: "boolean"
         description: "EOL保守の有無"
-      typeofconstraction:
+      typeOfConstraction:
         type: "string"
         description: "構築区分"
       subject:
         type: "string"
         description: "契約名称"
-      enduser:
+      endUser:
         type: "string"
         description: "エンドユーザー"
     description: "保守契約情報"
@@ -536,7 +564,7 @@ definitions:
     type: "object"
     required:
     - "id"
-    - "numof"
+    - "numOf"
     - "total"
     properties:
       id:
@@ -549,7 +577,7 @@ definitions:
       index:
         type: "integer"
         description: "データの開始位置"
-      numof:
+      numOf:
         type: "integer"
         format: "int64"
         description: "データの提供数"
@@ -561,9 +589,9 @@ definitions:
     type: "object"
     required:
     - "contract"
-    - "productid"
+    - "productId"
     properties:
-      productid:
+      productId:
         type: "string"
         description: "製品ID"
       productName:
@@ -587,49 +615,49 @@ definitions:
       eol:
         type: "boolean"
         description: "EOL"
-      individualcontract:
+      individualContract:
         type: "string"
         description: "製品／個別条件書"
-      servicemenu:
+      serviceMenu:
         type: "string"
         description: "メニュー名"
-      servicemodelno:
+      serviceModelNo:
         type: "string"
         description: "サービス型番"
-      productlistprice:
+      productListPrice:
         type: "string"
         description: "製品定価"
-      servicetypecode:
+      serviceTypeCode:
         type: "string"
         description: "サービス種別コード"
-      servicetype:
+      serviceType:
         type: "string"
         description: "サービス種別"
       sla:
         type: "string"
         description: "SLA"
-      accountmgmtno:
+      accountMgmtNo:
         type: "string"
         description: "アカウント管理番号"
-      moniteringtype:
+      moniteringType:
         type: "string"
         description: "モニタリング種別"
-      dedicatedmaintenanceno:
+      dedicatedMaintenanceNo:
         type: "string"
         description: "専用保守部材管理番号"
       qa:
         type: "boolean"
         description: "QA有無"
-      shippingno:
+      shippingNo:
         type: "string"
         description: "出荷番号"
-      shippingdate:
+      shippingDate:
         type: "string"
         description: "出荷日時"
       serial:
         type: "string"
         description: "シリアル番号"
-      typeofservice:
+      typeOfService:
         type: "string"
         description: "サービス種別"
       address:
@@ -645,7 +673,7 @@ definitions:
       index:
         type: "integer"
         format: "int64"
-      numof:
+      numOf:
         type: "integer"
         format: "int64"
       Products:
@@ -653,6 +681,20 @@ definitions:
         items:
           $ref: "#/definitions/Product"
   inline_response_200:
+    required:
+    - "id"
+    - "total"
+    properties:
+      total:
+        type: "integer"
+        format: "int64"
+        description: "全担当営業数（検索条件に一致した件数）"
+      Sales:
+        $ref: "#/definitions/Sales"
+      id:
+        type: "string"
+        description: "会社ID"
+  inline_response_200_1:
     required:
     - "id"
     - "total"
